--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -1,1 +1,123 @@
 /*Ivan garcia Garcia UO293577*/
+/*Especificidad 001*/
+body {
+    font-family: Tahoma,serif;
+    font-weight: normal;
+    font-size: medium;
+    background-color: #ebe8e0;
+    color: #0a0a00;
+}
+/*Especificidad 001*/
+header{
+    /*background-color: #d01110;*/
+    background-color: #B30000;
+    color: #FFFFFF;    
+}
+
+/*Especificidad 002*/
+header a{
+    text-decoration: none;
+    /*Hereda el color de fondo de header*/
+    color: #FFFFFF;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+/*Especificidad 002*/
+header + p{
+    font-size: small;
+}
+/*Especificidad 001*/
+a{
+    /*Hereda el color de fondo de body*/
+    color: #0a0a00;
+    font-weight: bold;
+}
+/*Especificidad 012*/
+p a:hover{
+    /*Hereda el color de body*/
+    background: #FF6B6B;
+}
+/*Especificidad 012*/
+main a:hover{
+    /*Hereda el color de header*/
+    background: #FF6B6B;
+}
+/*Especificidad 001*/
+ol{
+    list-style:square;
+}
+/*Especificidad 002*/
+ol ul{
+    list-style:disc;
+}
+
+dl dt{
+    font-weight: bold;
+}
+dl dd{
+    font-style: italic;
+}
+
+table {
+    border-collapse: collapse;
+    width: 24%;
+    text-align: left;
+    border-style: solid;
+    border-color: #0a0a00;
+    
+}
+
+table td{
+    text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #0a0a00;
+    
+}
+
+table th{
+    border-style: solid;
+    border-width: 1px;
+    border-color: #0a0a00;
+}
+
+th:nth-child(2) {
+    text-align: center;
+}
+
+video{
+    width: 70%;
+    height:auto;
+    padding-left: 15%;
+}
+
+
+a.active{
+    background-color: #ebe8e0;
+    color: #0a0a00;
+    text-decoration: underline;
+}
+
+@media screen and (max-width: 480px) {
+    header + p{
+        display: none;
+    }
+
+    header nav{
+        font-size: 0.75em;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 530px) {
+
+    nav{
+        font-size: 0.8em;
+    }
+}
+
+@media screen and (min-width: 531px) and (max-width: 585px) {
+
+    header nav a{
+        font-size: 0.9em;
+    }
+}
