--- a/estilo/memoria.css
+++ b/estilo/memoria.css
@@ -3,14 +3,15 @@ body button{
     font-size: 1.2em;
 }
 section{
-    width: 50%;
+    width: 87%;
     height: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 1%;
-    margin: 5%;          /*Centra la sección en la página */
-    padding-left: 17.5%;
+    align-content: center;
+    gap: 0.5%;
+    margin-top: 5%;          /*Centra la sección en la página */
+    margin-left: 5%;
 }
 
 section h2{
@@ -32,8 +33,8 @@ section article{
     background-color: #71bafd;
     transform-style: preserve-3d;
     transition: transform 0.5s;
-    height: 15vh;
-
+    height: 18vh;
+    margin-bottom: 0.5%;
 }
 
 article[data-state=flip] {
@@ -48,7 +49,7 @@ article h3{
 section article img{
     margin: 0;
     position: absolute;
-    width: 80%;
+    width: 90%;
     max-height: 90%;                 /* La imagen ocupará el 100% del ancho del contenedor */
     height: auto;                /* Mantiene la proporción de la imagen */
     object-fit: contain;         /* Asegura que la imagen se escale sin perder proporciones */
