--- a/estilo/agenda_grid.css
+++ b/estilo/agenda_grid.css
@@ -1,15 +1,13 @@
-
-
-/* Para una escala proporcional según el ancho de la pantalla */
+/*Especificidad 001*/
 table {
     width: 100%;
 }
-
+/*Especificidad 002*/
 table caption {
     font-weight: bold;
     font-size: 1.5vw; /* Ajuste dinámico del tamaño de fuente */
 }
-
+/*Especificidad 002*/
 table th,
 table td {
     text-align: center;
@@ -18,9 +16,11 @@ table td {
 
 /* Usar media queries para tamaños más pequeños */
 @media (max-width: 768px) { /* Tablets y móviles grandes */
+    /*Especificidad 002*/
     table caption {
         font-size: 3vw;
     }
+    /*Especificidad 002*/
     table th,
     table td {
         font-size: 2vw;
@@ -28,9 +28,11 @@ table td {
 }
 
 @media (max-width: 480px) { /* Móviles pequeños */
+    /*Especificidad 002*/
     table caption {
         font-size: 4vw;
     }
+    /*Especificidad 002*/
     table th,
     table td {
         font-size: 3vw;
