--- a/estilo/carrusel.css
+++ b/estilo/carrusel.css
@@ -1,23 +1,22 @@
 
-
+/*Especificidad 001*/
 article {
     width: 100%;
     max-width: 100vh;
     height: 70vh;
     position: relative;
     overflow: hidden;
-    /* <===  */
     border-radius: 1em;
     align-self: center;
 }
-
+/*Especificidad 002*/
 article h3 {
     width: 100%;
     text-align: center;
     margin-bottom: 0.5em;
     font-size: 2em;
 }
-
+/*Especificidad 002*/
 article img {
     width: 100%;
     max-width: 100vh;
@@ -27,11 +26,11 @@ article img {
     object-fit: cover;
     border-radius: 0.5em;
 }
-
+/*Especificidad 012*/
 article button:active {
     transform: scale(1.1);
 }
-
+/*Especificidad 012*/
 article button:first-of-type {
     position: absolute;
     width: 2em;
@@ -50,7 +49,7 @@ article button:first-of-type {
     top: 50%;
     right: 2%;
 }
-
+/*Especificidad 012*/
 article button:last-of-type {
     position: absolute;
     width: 2em;
