--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -20,8 +20,8 @@ header a{
     text-decoration: none;
     /*Hereda el color de fondo de header*/
     color: #FFFFFF;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
 }
 
 /*Especificidad 002*/
@@ -74,14 +74,14 @@ table {
 table td{
     text-align: center;
     border-style: solid;
-    border-width: 1px;
+    border-width: 10%;
     border-color: #0a0a00;
     
 }
 /*Especificidad 002*/
 table th{
     border-style: solid;
-    border-width: 1px;
+    border-width: 10%;
     border-color: #0a0a00;
 }
 /*Especificidad 011*/
@@ -127,17 +127,18 @@ a.active{
         font-size: 0.9em;
     }
 }
-#mapa {
+/*Especificidad 002*/
+body >div {
     width: 100%;
     height: 40em; /* Define un tamaño explícito */
     
 }
-
+/*Especificidad 001*/
 svg{
     width: 100%;
     height: 60vh;
 }
-
+/*Especificidad 002*/
 article img{
     width: 75vh;
 }
