--- a/estilo/semaforo.css
+++ b/estilo/semaforo.css
@@ -1,34 +1,40 @@
+
+/*Especificidad 002*/
 body main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 1em;
   align-content: center;
+
 }
 
+/*Especificidad 003*/
 body main div {
   background-color: rgba(0, 0, 0, 0.63);
   border: 0.7em solid #000000;
   aspect-ratio: 1;
   border-radius: 50%;
+  box-sizing: border-box; /* Incluye bordes en el tamaño */
 }
 
+/*Especificidad 003*/
 body main h2 {
   grid-column: 1 / -1;
   /* Hace que el h2 ocupe toda la fila */
   text-align: center;
 }
-
+/*Especificidad 003*/
 body main p {
   grid-column: 1 / -1;
   /* Hace que el h2 ocupe toda la fila */
   text-align: center;
 }
-
+/*Especificidad 012*/
 body button:first-of-type {
   grid-column: 2;
   text-align: center;
 }
-
+/*Especificidad 012*/
 body button:last-of-type {
   grid-column: 3;
   text-align: center;
@@ -54,43 +60,45 @@ body button:last-of-type {
   }
 }
 
-
+/*Especificidad 012*/
 main.load div {
   animation: lightOn 0.5s forwards;
 }
-
+/*Especificidad 022*/
 main.load div:first-of-type {
   animation-delay: 0s;
 
 }
-
+/*Especificidad 022*/
 main.load div:nth-of-type(2) {
   animation-delay: 0.5s;
 }
-
+/*Especificidad 022*/
 main.load div:nth-of-type(3) {
   animation-delay: 1s;
 }
-
+/*Especificidad 022*/
 main.load div:nth-of-type(4) {
   animation-delay: 1.5s;
 }
-
+/*Especificidad 022*/
 main.load.unload div {
   animation: out 0.1s forwards;
 }
-
+/*Especificidad 001*/
 form {
   grid-column: 1 / -1;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 1em;
   align-content: center;
+  max-width: 100%;
 }
-
+/*Especificidad 002*/
 form input{
   text-align: center;
 }
+/*Especificidad 012*/
 form input:last-of-type{
   grid-column: 2 / 4;
   justify-self: center; /* Centra el input dentro de su celda */
